sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:15: error: value c is not a member of Unit
possible cause: maybe a semicolon is missing before `value c'?
		}c=c+1 
                 ^